# notes

./: .gitignore  NOTES.md  README.md  cpp_notes.md  css_tricks.md  esp32_linux.md  ffmpeg.md  javascript_note.md  nginx.md  other_notes.md  pyproject.toml  python_notes.md  requirements.txt  shell_tools.md  ssl.md  web_notes.md
IR/: sqlglot_example.py
LLM/: .gitignore  basic_chatbot.ipynb  chroma.ipynb  dpo_finetune_example.ipynb  finetuning_example.ipynb  milvus_example.ipynb  ollama_tool_calling.ipynb  openrouter.py  semantic-search.ipynb
LLM/ollama/: request.py  vision.py
RL/: .gitignore  actor_critic.ipynb  actor_critic2.ipynb  ddpg.ipynb  dqn-pytorch.ipynb
Real-ESRGAN/: .gitignore  README.md  download.sh
advent-of-code/: .gitignore
algorithm/: .gitignore  aho_corasick.cc  articulation_point.cc  bellman_ford.cc  binary_lifting.cc  bridge.cc  chinese_remainder_theorem.cc  closest_pair_of_points.cc  conv_2d.cc  de_bruijn.cc  dijkstra.cc  dinic.cc  disjoint_set.cc  disjoint_set.rs  edmond_karp.cc  euler_path.cc  extended_euclidean.cc  fenwick_tree.cc  fft.cc  fft_inplace.cc  fft_modulus.cc  first_bit.cc  floyd_warshall.cc  gcd.cc  gift_wrapping.cc  gray.cc  grundy.cc  heavy_light_decomposition.cc  interger_factorization.cc  inverse_factorial.cc  kadane.cc  kmp.cc  kosaraju.cc  lca.cc  lexigraphic_rank_of_string.cc  lucus_theorem.cc  manacher.cc  modular_division.cc  pratt_parsing.cc  prim.cc  (+17 more)
android/CameraXBasic/: README.md  settings.gradle.kts
android/ComposeBasic/: settings.gradle.kts
android/GLES3Sample/: settings.gradle.kts
android/ImageClassification/: .gitignore  export.py  settings.gradle.kts
android/OCRExample/: README.md  settings.gradle.kts
android/ObjectDetection/: settings.gradle.kts
android/YoloObjectDetection/: .gitignore  README.md  export.py  settings.gradle.kts  test.py
atcoder/abc424/: a  a.cc
bioinformatics/: .gitignore  NOTES.md  final.ipynb  lecture.md
bpe/: .gitignore  README.md  bpe.cc
cloudflared/: README.md
codeforces/: .gitignore  1113a.cc  1339a.cc  1475b.cc  1561a.cc  1562a.cc  1611a.cc  1613b.cc  1614c.cc  1615b.cc  1616b.cc  1616c.cc  1617b.cc  1618d.cc  1619a.cc  1620a.cc  1621a.cc  1622c.cc  1625a.cc  1627a.cc  1631b.cc  1632a.cc  1633c.cc  1634a.cc  1635c.cc  1637a.cc  1637c.cc  1638a.cc  1638b.cc  1638c.cc  1638d.cc  1641a.cc  1642a.cc  1642b.cc  1644d.cc  1646a.cc  1646c.cc  1646d.cc  1650b.cc  1650c.cc  (+9 more)
codeforces/1206/: b.cc
codeforces/1215/: f.cc
codeforces/1608/: a.cc
codeforces/1611/: 1611b.cc
codeforces/1614/: 1614b.cc  a.cc
codeforces/1615/: a.cc  c.cc
codeforces/1616/: 1616a.cc
codeforces/1617/: 1617a.cc
codeforces/1618/: 1618a.cc  1618b.cc  c.cc
codeforces/1619/: 1619b.cc
codeforces/1620/: b.cc
codeforces/1622/: b.cc
codeforces/1624/: 1624b.cc  a.cc  d.cc
codeforces/1625/: 1625b.cc
codeforces/1626/: 1626c.cc
codeforces/1627/: 1627c.cc
codeforces/1629/: a.cc  b.cc
codeforces/1631/: 1631a.cc
codeforces/1632/: b.cc
codeforces/1633/: 1633a.cc  1633d.cc  1633e.cc  b.cc
codeforces/1634/: 1634c.cc  b.cc
codeforces/1635/: a.cc  b.cc
codeforces/1637/: b.cc
codeforces/1644/: 1644a.cc
codeforces/1646/: b.cc
cpp/: .gitignore
cpp/CLI11/example/: CMakeLists.txt  example.cc
cpp/CLI11/sample/: CMakeLists.txt
cpp/ImageMagick/example/: CMakeLists.txt  download.sh  example.cc
cpp/ImageMagick/sample/: CMakeLists.txt
cpp/LZMA/example/: CMakeLists.txt  example.cc
cpp/OpenXLSX/example/: CMakeLists.txt  example.cc
cpp/PDF-Writer/example/: CMakeLists.txt  example_parser.cc  example_watermark.cc  example_write.cc
cpp/SDL3/sample/: CMakeLists.txt  sample.cc
cpp/SFML/example/: CMakeLists.txt
cpp/SFML/sample/: CMakeLists.txt  sample.cc
cpp/abseil-cpp/example/: CMakeLists.txt  container_example.cc  log_example.cc  strings_example.cc
cpp/abseil-cpp/sample/: CMakeLists.txt  sample.cc
cpp/absl/sample/: CMakeLists.txt  sample.cc
cpp/benchmark/example/: CMakeLists.txt  example.cc  lib.cc
cpp/benchmark/sample/: CMakeLists.txt  lib.cc  lib.h  sample.cc
cpp/boost/example/: CMakeLists.txt  datetime_example.cc  filesystem_example.cc  regex_example.cc  string_example.cc  uuid_example.cc
cpp/boost/sample/: CMakeLists.txt  argument_parser_sample.cc  atomic_sample.cc  echo_sample.cc
cpp/cereal/example/: CMakeLists.txt  example.cc
cpp/clamav/sample/: CMakeLists.txt  README.md  sample.cc
cpp/cpr/example/: CMakeLists.txt
cpp/cpr/sample/: CMakeLists.txt  sample.cc
cpp/cuda/matmul-example/: CMakeLists.txt  example.cc  matmul_example.cu
cpp/cuda/matmul-sample/: CMakeLists.txt  sample.cc  sample_matmul.cu  sample_matmul.h
cpp/curl/example/: CMakeLists.txt  example.cc
cpp/curl/openssl-example/: CMakeLists.txt  example.cc
cpp/tcp/: CMakeLists.txt  README.d  client.cc  client.h  client_app.cc  server.cc  server.h  server_app.cc
crypto/: rsa.md
cses/: .gitignore
elasticsearch/: README.md  test.py
esphome/: bedroom.yaml  first.sh
fhir/: README.md
html/: 50x.html
jax/: .gitignore  Intro to FLAX.ipynb  Intro to JAX.ipynb  Keras VS JAX.ipynb  VAE.ipynb  cifar10.ipynb  differentiation.ipynb  flax_intro.ipynb  flax_mnist_example.ipynb  imagnet.ipynb  jax_intro.ipynb  jit.ipynb  keras_vs_jax.ipynb  pytrees.ipynb  seq2seq.ipynb  vmap.ipynb
jitsi/: docker.md
kubernetes/: README.md
langchain/: RAG_llama3.2.ipynb  RAG_mupdf.ipynb
linux/: MINIMAL.md  custom.md
loinc/: test.py
nginx/: nginx.example.conf
ngrok/: README.md
ocr/: .gitignore  requirements.txt  test.py
opengl/n-body/: CMakeLists.txt  main.cc  particle.cc  particle.h  particle_system.cc  particle_system.h  simulation.cc  simulation.h  window.cc  window.h
opengl/n-body/shaders/: fragment_shader.glsl  vertex_shader.glsl
os/: notes.md  simple_boot_sector.asm
papers/: deep_double_descent.md
pdf/: pdf.md
pico/: README.md
pico/blink/: CMakeLists.txt  main.c
pico/lcd/: CMakeLists.txt  main.c
prometheus/: prometheus.md
robotics/: homogeneous_coordinates.md
security/: DependencyCheck.md  README.md  certificate.md  kics.md  semgrep.md
whisper/: .gitignore  whisper.md
(+3924 files in other folders)
